# redissertation

./: .gitignore  README.md  pyproject.toml
notebooks/: exploring_tornado_dataset.ipynb
redissertation/: data.py  download-GEFSV12-v0.1.py  process_reforecast_data.py
